<resources>
    <string name="app_name">Cashoo</string>
    <string name="title_home">Home</string>
    <string name="title_analysis">Analysis</string>
    <string name="title_add">Add</string>
    <string name="title_category">Category</string>
    <string name="title_rewards">Rewards</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="category_icon">Category Icon</string>
    <string name="appbar_scrolling_view_behavior">scroll</string>
    <string name="title_settings">Settings</string>
    <string name="title_editProfile">Edit Profile</string>
    <string name="terms_text">
    I\'ve read and agree with the <font color="#D9A53E">Terms and Conditions</font> and the <font color="#D9A53E">Privacy Policy</font>.
</string>

</resources>